# matrixserver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Update.sh
MainMenu/: CMakeLists.txt  mainmenu.cpp  mainmenu.h
application/: ADS1000.cpp  ADS1000.h  CMakeLists.txt  CubeApplication.cpp  CubeApplication.h  Font6px.h  Image.cpp  Image.h  Joystick.cpp  Joystick.h  MatrixApplication.cpp  MatrixApplication.h  MatrixApplicationStandalone.cpp  MatrixApplicationStandalone.h  Mpu6050.cpp  Mpu6050.h
common/: CMakeLists.txt  Cobs.cpp  Cobs.h  Color.cpp  Color.h  IpcConnection.cpp  IpcConnection.h  IpcServer.cpp  IpcServer.h  Joystick.cpp  Joystick.h  Screen.cpp  Screen.h  SocketConnection.cpp  SocketConnection.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  UniversalConnection.cpp  UniversalConnection.h  UnixSocketClient.cpp  UnixSocketClient.h  UnixSocketServer.cpp  UnixSocketServer.h
common/protobuf/: matrixserver.proto
exampleApplications/: CMakeLists.txt
exampleApplications/Breakout3D/: CMakeLists.txt
exampleApplications/Breakout3D/src/: aplay.cpp  aplay.h  breakoutgame.cpp  breakoutgame.h  main.cpp
exampleApplications/CubeTestApp/: CMakeLists.txt  CubeTest.cpp  CubeTest.h  main.cpp
exampleApplications/Genetic/: CMakeLists.txt  genetic.cpp  genetic.h  main.cpp
exampleApplications/ImuTest/: CMakeLists.txt  ImuTest.cpp  ImuTest.h  main.cpp
exampleApplications/MainMenu/: CMakeLists.txt  main.cpp  mainmenu.cpp  mainmenu.h
exampleApplications/Picture/: CMakeLists.txt  README.md  main.cpp  picture.cpp  picture.h
exampleApplications/PixelFlow/: CMakeLists.txt  main.cpp  pixelflow.cpp  pixelflow.h
exampleApplications/PixelFlow3/: CMakeLists.txt  pixelflow.cpp  pixelflow.h
renderer/: CMakeLists.txt  IRenderer.cpp  IRenderer.h
renderer/FPGARenderer/: CMakeLists.txt  FPGARenderer.cpp  FPGARenderer.h  FPGARendererFTDI.cpp  FPGARendererFTDI.h  FPGARendererRPISPI.cpp  FPGARendererRPISPI.h  README.md
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/Documents/: BuildProcedure_LibMPSSE.txt
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/Common/inc/: ftdi_common.h
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/Common/src/: ftdi_common.c
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/Infra/inc/: ftdi_infra.h
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/Infra/src/: ftdi_infra.c
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/MiddleLayer/inc/: ftdi_mid.h
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/MiddleLayer/src/: ftdi_mid.c
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/TopLayer/SPI/inc/: ftdi_spi.h
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/LibMPSSE/TopLayer/SPI/src/: ftdi_spi.c
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/Release/: ReleaseNotes-SPI.txt
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/Release/include/: libMPSSE_spi.h
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/Release/samples/SPI/: b.bash  b.bat  d.bash  d.bat
renderer/FPGARenderer/LibMPSSE-SPI_source/LibMPSSE-SPI/Release/samples/SPI/SPI/: sample-dynamic.c  sample-static.c
renderer/FPGARenderer/mpsse/: mpsse.c
renderer/RGBMatrixRenderer/: CMakeLists.txt  RGBMatrixRenderer.cpp  RGBMatrixRenderer.h
renderer/RGBMatrixRenderer/imu/: CMakeLists.txt  Imu.cpp  Imu.h  SerialPort.cpp  SerialPort.h
renderer/SimulatorRenderer/: CMakeLists.txt  SimulatorRenderer.cpp  SimulatorRenderer.h
renderer/TestRenderer/: CMakeLists.txt  TestRenderer.cpp  TestRenderer.h
server/: App.cpp  App.h  CMakeLists.txt  Server.cpp  Server.h
server_FPGA/: CMakeLists.txt  main.cpp
server_FPGA_RPISPI/: CMakeLists.txt  main.cpp
server_RGBMatrix/: CMakeLists.txt  main.cpp
server_simulator/: CMakeLists.txt  main.cpp
server_testapp/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test-unixSocket.cpp  tests-cobs.cpp  tests-screen.cpp  tests-tcp.cpp
